--- a/Java2Lab3/src/fxml/FXMLDoc.fxml
+++ b/Java2Lab3/src/fxml/FXMLDoc.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TextField?>
@@ -12,7 +13,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.control.Hyperlink?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="657.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FXMLDocumentController">
    <bottom>
@@ -64,7 +64,7 @@
          <children>
             <Pane fx:id="patientPane" layoutX="14.0" layoutY="17.0" prefHeight="480.0" prefWidth="801.0" visible="false" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="17.0">
                <children>
-                  <GridPane layoutX="240.0" layoutY="163.0" prefHeight="180.0" prefWidth="339.0">
+                  <GridPane fx:id="patientGrid" layoutX="240.0" layoutY="163.0" prefHeight="180.0" prefWidth="339.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -101,7 +101,7 @@
                   </FlowPane>
                </children>
             </Pane>
-            <Pane fx:id="inpatientPane" layoutX="14.0" layoutY="15.0" visible="false" prefHeight="485.0" prefWidth="801.0">
+            <Pane fx:id="inpatientPane" layoutX="14.0" layoutY="15.0" prefHeight="485.0" prefWidth="801.0" visible="false">
                <children>
                   <GridPane layoutX="240.0" layoutY="163.0" prefHeight="180.0" prefWidth="339.0">
                      <columnConstraints>
