--- a/Java2Lab3/src/fxml/FXMLDoc.fxml
+++ b/Java2Lab3/src/fxml/FXMLDoc.fxml
@@ -103,7 +103,7 @@
             </Pane>
             <Pane fx:id="inpatientPane" layoutX="14.0" layoutY="15.0" prefHeight="485.0" prefWidth="801.0" visible="false">
                <children>
-                  <GridPane layoutX="240.0" layoutY="163.0" prefHeight="180.0" prefWidth="339.0">
+                  <GridPane layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -115,27 +115,31 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label text="Patient ID" />
-                        <Label text="Date Of Stay" GridPane.rowIndex="2" />
-                        <Label text="Room Number" GridPane.rowIndex="4" />
-                        <Label text="Daily Rate" GridPane.columnIndex="1" />
-                        <Label text="Supplies" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label text="Services" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField fx:id="inpPid" GridPane.rowIndex="1" />
-                        <TextField fx:id="inpDRate" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="dateOfStay" GridPane.rowIndex="3" />
-                        <TextField fx:id="inpSupp" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="inpRNum" GridPane.rowIndex="5" />
-                        <TextField fx:id="inpServ" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label text="Patient ID" GridPane.rowIndex="2" />
+                        <Label text="Date Of Stay" GridPane.rowIndex="4" />
+                        <Label text="Room Number" GridPane.rowIndex="6" />
+                        <Label text="Daily Rate" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Supplies" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label text="Services" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField fx:id="inpPid" GridPane.rowIndex="3" />
+                        <TextField fx:id="inpDRate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="dateOfStay" GridPane.rowIndex="5" />
+                        <TextField fx:id="inpSupp" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="inpRNum" GridPane.rowIndex="7" />
+                        <TextField fx:id="inpServ" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Label text="ID" />
+                        <TextField fx:id="inpID" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </children>
             </Pane>
             <Pane fx:id="surgicalPane" layoutX="14.0" layoutY="14.0" prefHeight="482.0" prefWidth="801.0" visible="false">
                <children>
-                  <GridPane layoutX="240.0" layoutY="163.0" prefHeight="180.0" prefWidth="339.0">
+                  <GridPane layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -147,22 +151,24 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label text="Patient ID" />
-                        <Label text="Date Of Surgery" GridPane.rowIndex="2" />
-                        <Label text="Surgery" GridPane.rowIndex="4" />
-                        <Label text="Room Fee" GridPane.columnIndex="1" />
-                        <Label text="Surgeon Fee" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <!--
-                        <TextField fx:id="pidSurg" onAction="#setPidSurg" GridPane.rowIndex="1" />
-                        <TextField fx:id="surgRFee" onAction="#setSurgRFee" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="dateSurg" onAction="#setDateSurg" GridPane.rowIndex="3" />
-                        <TextField fx:id="surgFee" onAction="#setSurgFee" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="surg" onAction="#setSurg" GridPane.rowIndex="5" />
-                        <Label text="Supplies" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField fx:id="surgSupp" onAction="#setSurgSupp" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        -->
+                        <Label text="Patient ID" GridPane.rowIndex="2" />
+                        <Label text="Date Of Surgery" GridPane.rowIndex="4" />
+                        <Label text="Surgery" GridPane.rowIndex="6" />
+                        <Label text="Room Fee" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Surgeon Fee" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="pidSurg" GridPane.rowIndex="3" />
+                        <TextField fx:id="surgRFee" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="dateSurg" GridPane.rowIndex="5" />
+                        <TextField fx:id="surgFee" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="surg" GridPane.rowIndex="7" />
+                        <Label text="Supplies" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField fx:id="surgSupp" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <TextField fx:id="surgID" GridPane.rowIndex="1" />
+                        <Label text="ID" />
                      </children>
                   </GridPane>
                   <Pagination layoutX="316.0" layoutY="359.0" prefHeight="54.0" prefWidth="188.0" />
@@ -170,7 +176,7 @@
             </Pane>
             <Pane fx:id="medicationPane" layoutX="7.0" layoutY="10.0" prefHeight="480.0" prefWidth="801.0" visible="false">
                <children>
-                  <GridPane layoutX="240.0" layoutY="163.0" prefHeight="180.0" prefWidth="339.0">
+                  <GridPane layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -182,20 +188,22 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label text="Patient ID" />
-                        <Label text="Date Of Med" GridPane.rowIndex="2" />
-                        <Label text="Med" GridPane.rowIndex="4" />
-                        <Label text="Unit Cost" GridPane.columnIndex="1" />
-                        <Label text="Units" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <!--
-                        <TextField fx:id="pidMed" onAction="#setPidMed" GridPane.rowIndex="1" />
-                        <TextField fx:id="medUCost" onAction="#setMedUCost" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="dateMed" onAction="#setDateMed" GridPane.rowIndex="3" />
-                        <TextField fx:id="medUnits" onAction="#setMedUnits" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="med" onAction="#setDateMed" GridPane.rowIndex="5" />
-                        -->
+                        <Label text="Patient ID" GridPane.rowIndex="2" />
+                        <Label text="Date Of Med" GridPane.rowIndex="4" />
+                        <Label text="Med" GridPane.rowIndex="6" />
+                        <Label text="Unit Cost" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Units" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="pidMed" GridPane.rowIndex="3" />
+                        <TextField fx:id="medUCost" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="dateMed" GridPane.rowIndex="5" />
+                        <TextField fx:id="medUnits" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="med" GridPane.rowIndex="7" />
+                        <Label text="ID" />
+                        <TextField fx:id="medID" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <Pagination layoutX="316.0" layoutY="359.0" prefHeight="54.0" prefWidth="188.0" />
