--- a/Java2Lab3/src/fxml/FXMLDoc.fxml
+++ b/Java2Lab3/src/fxml/FXMLDoc.fxml
@@ -15,7 +15,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="657.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FXMLDocumentController">
    <bottom>
-      <GridPane prefHeight="72.0" prefWidth="801.0" styleClass="bottomMenu" stylesheets="@../styles/style.css" BorderPane.alignment="CENTER">
+      <GridPane fx:id="bottomMenu"  prefHeight="72.0" prefWidth="801.0" styleClass="bottomMenu" stylesheets="@../styles/style.css" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
