--- a/Java2Lab3/src/fxml/FXMLDoc.fxml
+++ b/Java2Lab3/src/fxml/FXMLDoc.fxml
@@ -105,7 +105,7 @@
             </Pane>
             <Pane fx:id="inpatientPane" layoutX="14.0" layoutY="15.0" prefHeight="485.0" prefWidth="801.0" visible="false">
                <children>
-                  <GridPane layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
+                  <GridPane fx:id="inpatientGrid" layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -141,7 +141,7 @@
             </Pane>
             <Pane fx:id="surgicalPane" layoutX="14.0" layoutY="14.0" prefHeight="482.0" prefWidth="801.0" visible="false">
                <children>
-                  <GridPane layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
+                  <GridPane fx:id="surgicalGrid" layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -177,7 +177,7 @@
             </Pane>
             <Pane fx:id="medicationPane" layoutX="7.0" layoutY="10.0" prefHeight="480.0" prefWidth="801.0" visible="false">
                <children>
-                  <GridPane layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
+                  <GridPane fx:id="medicationGrid" layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
