--- a/Java2Lab3/src/fxml/FXMLDoc.fxml
+++ b/Java2Lab3/src/fxml/FXMLDoc.fxml
@@ -15,7 +15,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="657.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FXMLDocumentController">
    <bottom>
-      <GridPane fx:id="bottomMenu"  prefHeight="72.0" prefWidth="801.0" styleClass="bottomMenu" stylesheets="@../styles/style.css" BorderPane.alignment="CENTER">
+      <GridPane fx:id="bottomMenu" prefHeight="72.0" prefWidth="801.0" styleClass="bottomMenu" stylesheets="@../styles/style.css" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -62,7 +62,7 @@
       </HBox>
    </top>
    <center>
-      <AnchorPane prefHeight="490.0" prefWidth="801.0" styleClass="center" stylesheets="@../styles/style.css" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="centerPane" prefHeight="490.0" prefWidth="801.0" styleClass="center" stylesheets="@../styles/style.css" BorderPane.alignment="CENTER">
          <children>
             <Pane fx:id="patientPane" layoutX="14.0" layoutY="17.0" prefHeight="480.0" prefWidth="801.0" visible="false" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="17.0">
                <children>
@@ -86,7 +86,7 @@
                         <Label text="Diagnosis" GridPane.columnIndex="1" />
                         <Label text="Date Admitted" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Label text="Date Released" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField fx:id="PID" GridPane.rowIndex="1" />
+                        <TextField fx:id="pID" GridPane.rowIndex="1" />
                         <TextField fx:id="diag" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <TextField fx:id="fName" GridPane.rowIndex="3" />
                         <TextField fx:id="dAmit" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -103,7 +103,7 @@
                   </FlowPane>
                </children>
             </Pane>
-            <Pane fx:id="inpatientPane" layoutX="14.0" layoutY="15.0" prefHeight="485.0" prefWidth="801.0" visible="false">
+            <Pane fx:id="inpatientPane" layoutX="7.0" layoutY="13.0" prefHeight="485.0" prefWidth="801.0" visible="false">
                <children>
                   <GridPane fx:id="inpatientGrid" layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
                      <columnConstraints>
@@ -137,6 +137,7 @@
                         <TextField fx:id="inpID" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
+                  <Button fx:id="inpBackBtn" layoutX="377.0" layoutY="368.0" mnemonicParsing="false" onAction="#inpBackBtnClick" prefHeight="31.0" prefWidth="64.0" text="Back" />
                </children>
             </Pane>
             <Pane fx:id="surgicalPane" layoutX="14.0" layoutY="14.0" prefHeight="482.0" prefWidth="801.0" visible="false">
@@ -173,11 +174,12 @@
                         <Label text="ID" />
                      </children>
                   </GridPane>
+                  <Button fx:id="surgBackBtn" layoutX="378.0" layoutY="364.0" mnemonicParsing="false" onAction="#surgBackBtnClick" prefHeight="31.0" prefWidth="64.0" text="Back" />
                </children>
             </Pane>
             <Pane fx:id="medicationPane" layoutX="7.0" layoutY="10.0" prefHeight="480.0" prefWidth="801.0" visible="false">
                <children>
-                  <GridPane fx:id="medicationGrid" layoutX="240.0" layoutY="125.0" prefHeight="218.0" prefWidth="339.0">
+                  <GridPane fx:id="medicationGrid" layoutX="240.0" layoutY="125.0" prefHeight="194.0" prefWidth="339.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -189,24 +191,23 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label text="Patient ID" GridPane.rowIndex="2" />
-                        <Label text="Date Of Med" GridPane.rowIndex="4" />
-                        <Label text="Med" GridPane.rowIndex="6" />
-                        <Label text="Unit Cost" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Patient ID" GridPane.columnIndex="1" />
+                        <Label text="Date Of Med" GridPane.rowIndex="2" />
+                        <Label text="Med" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Unit Cost" GridPane.rowIndex="4" />
                         <Label text="Units" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField fx:id="pidMed" GridPane.rowIndex="3" />
-                        <TextField fx:id="medUCost" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="dateMed" GridPane.rowIndex="5" />
+                        <TextField fx:id="pidMed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="medUCost" GridPane.rowIndex="5" />
+                        <TextField fx:id="dateMed" GridPane.rowIndex="3" />
                         <TextField fx:id="medUnits" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <TextField fx:id="med" GridPane.rowIndex="7" />
+                        <TextField fx:id="med" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label text="ID" />
                         <TextField fx:id="medID" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
+                  <Button fx:id="medBackBtn2" layoutX="378.0" layoutY="360.0" mnemonicParsing="false" onAction="#medBackBtnClick" prefHeight="31.0" prefWidth="64.0" text="Back" />
                </children>
             </Pane>
          </children>
