--- a/Java2Lab3/src/fxml/FXMLDoc.fxml
+++ b/Java2Lab3/src/fxml/FXMLDoc.fxml
@@ -26,11 +26,11 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Hyperlink fx:id="clear" onAction="#clearClick" text="Clear" />
-            <Hyperlink fx:id="save" onAction="#saveClick" text="Save" GridPane.rowIndex="1" />
-            <Hyperlink fx:id="del" onAction="#delClick" text="Delete" GridPane.rowIndex="2" />
-            <Hyperlink fx:id="rep" onAction="#repClick" text="Report" translateY="15.0" GridPane.columnIndex="1" />
-            <Hyperlink fx:id="exit" onAction="#exitClick" text="Exit" translateY="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Hyperlink fx:id="clear" onAction="#clearClick" stylesheets="@../styles/style.css" text="Clear" />
+            <Hyperlink fx:id="save" onAction="#saveClick" stylesheets="@../styles/style.css" text="Save" GridPane.rowIndex="1" />
+            <Hyperlink fx:id="del" onAction="#delClick" stylesheets="@../styles/style.css" text="Delete" GridPane.rowIndex="2" />
+            <Hyperlink fx:id="rep" onAction="#repClick" stylesheets="@../styles/style.css" text="Report" translateY="15.0" GridPane.columnIndex="1" />
+            <Hyperlink fx:id="exit" onAction="#exitClick" stylesheets="@../styles/style.css" text="Exit" translateY="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </bottom>
@@ -96,7 +96,7 @@
                   </GridPane>
                   <FlowPane layoutX="612.0" layoutY="196.0" prefHeight="114.0" prefWidth="75.0">
                      <children>
-                        <Button fx:id="inpBtn" mnemonicParsing="false" onAction="#inpBtnClick" text="Inpatient" />
+                        <Button fx:id="inpBtn" mnemonicParsing="false" onAction="#inpBtnClick" prefHeight="31.0" prefWidth="80.0" text="Inpatient" />
                         <Button fx:id="surgBtn" mnemonicParsing="false" onAction="#surgBtnClick" prefHeight="31.0" prefWidth="80.0" text="Surgical" />
                         <Button fx:id="medBtn" mnemonicParsing="false" onAction="#medBtnClick" prefHeight="31.0" prefWidth="80.0" text="Meds" />
                      </children>
